--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,20 @@ services:
       - caddy_data:/data
       - caddy_config:/config
 
+  db:
+    image: postgres:17
+    container_name: db
+    restart: always
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+    ports:
+      - 127.0.0.1:5432:5432
+
 volumes:
   caddy_data:
   caddy_config:
+  pgdata:
